Fixing page stretching on cliking the link to anchor #2

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -11,6 +11,7 @@
  * It will be included in all color schemes
  */
 
+
 // Issue with homepage display being stretched out
 
 .horizontal-slider {
@@ -72,12 +73,6 @@
   #aspect_submission_StepTransformer_item_publication-title{
     margin-bottom:5px;
   }
-}
-
-// Main content stretching fix
-.main-content {
-	margin: 0 auto;
-  padding-bottom: 0;
 }
 
 // Skip link
