--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
@@ -74,13 +74,6 @@
   }
 }
 
-// Main content stretching fix
-.main-content {
-	margin: 0 auto;
-  // padding-bottom: 0;
-  // padding-bottom: 10px;
-}
-
 // Skip link
 
 .main-content-tabber, .main-content-tabber:hover {
